Add data dictionary card

--- a/webportal/webapp/src/app/account/accounthome/accounthome.component.html
+++ b/webportal/webapp/src/app/account/accounthome/accounthome.component.html
@@ -1,45 +1,47 @@
 <div class="container">
-  <div class="infoDiv">
-    <p>Welcome to the Secure Data Commons Platform (SDC), a sandbox environment in AWS managed by U.S. Department of
-      transportation. The SDC platform provides a collaborative environment for traffic engineers, researchers, data scientists and
-      anyone who is interested in carrying out research and analysis on different datasets related to traffic, weather,
-      crashes etc.
-    </p>
-    <p>
-      Ready to Get Started? Follow the steps below or directly jump to any of the sections that you wish to access.
-      SDC Users will have the following access in the platform:
-    </p>
-  </div>
-  <div>
-    <div class="row" style="padding-top: 50px;">
-      <div class="col-md-5">
-        <mat-card style="height: 140px">
-          <mat-card-subtitle class="matTitle"><img src="../../assets/images/drop_icon/1.png"> &nbsp; Curated and published datasets</mat-card-subtitle>
-          <mat-card-content class="matContent">Check out the list of currently available datasets (curated, published), data dictionaries owned by you and others</mat-card-content>
-        </mat-card>
+  <mat-card>
+    <div class="infoDiv">
+      <p>Welcome to the Secure Data Commons Platform (SDC), a sandbox environment in AWS managed by U.S. Department of
+        transportation. The SDC platform provides a collaborative environment for traffic engineers, researchers, data scientists and
+        anyone who is interested in carrying out research and analysis on different datasets related to traffic, weather,
+        crashes etc.
+      </p>
+      <p>
+        Ready to Get Started? Follow the steps below or directly jump to any of the sections that you wish to access.
+        SDC Users will have the following access in the platform:
+      </p>
+    </div>
+    <div>
+      <div class="row" style="padding-top: 50px;">
+        <div class="col-md-6">
+          <mat-card style="height: 140px">
+            <mat-card-subtitle class="matTitle"><img src="../../assets/images/drop_icon/1.png"> &nbsp; Curated and published datasets</mat-card-subtitle>
+            <mat-card-content class="matContent">Check out the list of currently available datasets (curated, published), data dictionaries owned by you and others</mat-card-content>
+          </mat-card>
+        </div>
+        <!--<div class="col-md-1"></div>-->
+        <div class="col-md-6">
+          <mat-card style="height: 140px">
+            <mat-card-subtitle class="matTitle"><img src="../../assets/images/drop_icon/2.png"> &nbsp;Access to workstations with programming tools</mat-card-subtitle>
+            <mat-card-content class="matContent">Access the workstations assigned to you, if you have requested as part of the registration process </mat-card-content>
+          </mat-card>
+        </div>
       </div>
-      <div class="col-md-1"></div>
-      <div class="col-md-5">
-        <mat-card style="height: 140px">
-          <mat-card-subtitle class="matTitle"><img src="../../assets/images/drop_icon/2.png"> &nbsp;Access to workstations with programming tools</mat-card-subtitle>
-          <mat-card-content class="matContent">Access the workstations assigned to you, if you have requested as part of the registration process </mat-card-content>
-        </mat-card>
+      <div class="row" style="padding-top: 50px;">
+        <div class="col-md-6">
+          <mat-card style="height: 140px">
+            <mat-card-subtitle class="matTitle"><img src="../../assets/images/drop_icon/3.png"> &nbsp;Bring your own algorithms / code</mat-card-subtitle>
+            <mat-card-content class="matContent">Learn more about how you can bring your algorithms and code to the SDC platform</mat-card-content>
+          </mat-card>
+        </div>
+        <!--<div class="col-md-1"></div>-->
+        <div class="col-md-6">
+          <mat-card style="height: 140px">
+            <mat-card-subtitle class="matTitle"><img src="../../assets/images/drop_icon/4.png"> &nbsp;Publish derived datasets and analysis</mat-card-subtitle>
+            <mat-card-content class="matContent">Learn more about how you can publish your analyses and share your research with others</mat-card-content>
+          </mat-card>
+        </div>
       </div>
     </div>
-    <div class="row" style="padding-top: 50px;">
-      <div class="col-md-5">
-        <mat-card style="height: 140px">
-          <mat-card-subtitle class="matTitle"><img src="../../assets/images/drop_icon/3.png"> &nbsp;Bring your own algorithms / code</mat-card-subtitle>
-          <mat-card-content class="matContent">Learn more about how you can bring your algorithms and code to the SDC platform</mat-card-content>
-        </mat-card>
-      </div>
-      <div class="col-md-1"></div>
-      <div class="col-md-5">
-        <mat-card style="height: 140px">
-          <mat-card-subtitle class="matTitle"><img src="../../assets/images/drop_icon/4.png"> &nbsp;Publish derived datasets and analysis</mat-card-subtitle>
-          <mat-card-content class="matContent">Learn more about how you can publish your analyses and share your research with others</mat-card-content>
-        </mat-card>
-      </div>
-    </div>
-  </div>
+  </mat-card>
 </div>
