changes as per review

--- a/webportal/webapp/src/app/main/about/about.component.html
+++ b/webportal/webapp/src/app/main/about/about.component.html
@@ -9,9 +9,7 @@
         <div class="col-md-4">
             <mat-card class="card">
                 <mat-card-title class="cardTitle">About SDC</mat-card-title>
-                <mat-card-content class="cardContent">The Secure Data Commons is an online portal
-                    where you can perform data analysis on a growing number of
-                    transportation-related data sets.
+                <mat-card-content class="cardContent">The Secure Data Commons is an online analytic portal for transportation researchers. On this portal, researchers can take advantage of pre-established programming environments to access and analyze a growing set of transportation-related data sets.
                 </mat-card-content>
                 <mat-card-actions>
                     <div class="cardBtn">
@@ -37,7 +35,7 @@
         <div class="col-md-4">
             <mat-card class="card">
                 <mat-card-title class="cardTitle">Sign up</mat-card-title>
-                <mat-card-content class="cardContent">What to get started? Complete our online
+                <mat-card-content class="cardContent">Complete our online
                     access request form and when you are
                     approved you can begin creating your very
                     own data analysis environments!
