--- a/webportal/webapp/src/app/main/register/register.component.css
+++ b/webportal/webapp/src/app/main/register/register.component.css
@@ -63,8 +63,8 @@
 }
 
 .textFormat {
-    font-family: serif;
-    font-weight: 600;
+    /*font-family: serif;*/
+    /*font-weight: 600;*/
     font-size: 16px;
     margin-top: 50px;
     color: #777;
