--- a/webportal/webapp/src/app/main/register/register.component.html
+++ b/webportal/webapp/src/app/main/register/register.component.html
@@ -6,12 +6,7 @@
         <h3>Sign up</h3>
         <p class="textFormat">Ready to Get Started? Please download the access request
           form below, fill out the required details and send an email
-          to support@sdc.usdot.com. Once approved,
-          we will send you an email with the instructions for
-          accessing the platform.
-          Ready to Get Started? Please download the access request
-          form below, fill out the required details and send an email
-          to support@sdc.usdot.com. Once approved,
+          to support@securedatacommons.com. Once approved,
           we will send you an email with the instructions for
           accessing the platform.</p>
 
