--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -9,36 +9,41 @@
 <div class="container">
   <mat-card>
     <div class="row">
-      <h3>My Workstations</h3>
-      <table class="table">
-        <thead class="thead-inverse">
-        <tr>
-          <th>#</th>
-          <th>Stack Name</th>
-          <th>Applications</th>
-          <th>Action</th>
-          <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <ng-template ngFor let-stack [ngForOf]="stacks" let-i="index+1">
+      <h3>My Workstations</h3><hr>
+      <mat-card-content style="max-height: 300px;overflow-y: scroll">
+        <table class="table">
+          <thead class="thead-inverse">
           <tr>
-            <td>{{ i }}</td>
-            <td>{{ stack.stack_name }}</td>
-            <td> {{stack.application}} </td>
-            <td>
-              <div *ngIf="stack.instance_id && instanceState.Status">
-                <span *ngIf="instanceState.Status == 'running' "> Stop </span>
-                <span *ngIf="instanceState.Status != 'running' "> Run </span>
-              </div>
-            </td>
-            <td>
-              <button class="btn btn-primary dotBtn" (click)="launchWorkstation(stack)">Launch</button>
-            </td>
+            <th>#</th>
+            <th>Stack Name</th>
+            <th>Applications</th>
+            <th>Action</th>
+            <th></th>
           </tr>
-        </ng-template>
-        </tbody>
-      </table>
+          </thead>
+          <tbody>
+          <ng-template ngFor let-stack [ngForOf]="stacks" let-i="index+1">
+            <tr>
+              <td>{{ i }}</td>
+              <td>{{ stack.display_name }}</td>
+              <td> {{stack.application}} </td>
+              <td>
+                <div *ngIf="!stack.instance_id">
+                  <span> -- </span>
+                </div>
+                <div *ngIf="stack.instance_id && instanceState && instanceState.Status" style="cursor: pointer;">
+                  <a *ngIf="instanceState.Status == 'running' " (click)="instanceAction('stop')"> Stop </a>
+                  <a *ngIf="instanceState.Status != 'running' " (click)="instanceAction('run')"> Run </a>
+                </div>
+              </td>
+              <td>
+                <button class="btn btn-primary dotBtn" (click)="launchWorkstation(stack)">Launch</button>
+              </td>
+            </tr>
+          </ng-template>
+          </tbody>
+        </table>
+      </mat-card-content>
     </div>
   </mat-card>
 </div>
