--- a/webportal/webapp/src/app/main/main.component.html
+++ b/webportal/webapp/src/app/main/main.component.html
@@ -16,7 +16,7 @@
       <div class="col-md-8" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right" style="font-size: 11px">
           <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link" [routerLink]="['/about']">ABOUT &emsp; &nbsp;|</a>
+            <a class="nav-link" [routerLink]="['/about']">ABOUT US &emsp; &nbsp;|</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
             <a class="nav-link" [routerLink]="['/home']">DATASETS &emsp; &nbsp;|</a>
