--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -9,7 +9,9 @@
 <div class="container">
   <mat-card>
     <div class="row">
-      <h3>My Workstations</h3><hr>
+      <h3>My Workstations</h3>
+        <span>Workstations are windows are linux Virtual Machines (VMs), which are the means to access the
+            datasets and perform analysis on the datasets assigned to a user.</span><hr>
       <mat-card-content style="max-height: 300px;overflow-y: scroll">
         <table class="table">
           <thead class="thead-inverse">
