--- a/webportal/webapp/src/app/main/register/register.component.html
+++ b/webportal/webapp/src/app/main/register/register.component.html
@@ -4,7 +4,7 @@
     <div class="row row-divided">
       <div class="col-xs-6 column-one">
         <h3>Sign up</h3>
-        <p class="textFormat">Ready to Get Started? Please download the access request
+        <p class="textFormat">Please download the access request
           form below, fill out the required details and send an email
           to support@securedatacommons.com. Once approved,
           we will send you an email with the instructions for
