--- a/webportal/webapp/src/app/account/account.component.html
+++ b/webportal/webapp/src/app/account/account.component.html
@@ -25,6 +25,9 @@
             <a class="nav-link" [routerLink]="['/account/workstation']">WORKSTATIONS &emsp; &nbsp;|</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
+            <a class="nav-link" [routerLink]="['/account/FAQ']">FAQ's &emsp; &nbsp;|</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['active']">
             <a class="nav-link" style="cursor: pointer" (click)="userLogout()">LOGOUT</a>
           </li>
 
