change mail format and form

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.css
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.css
@@ -3,7 +3,7 @@
     color: #fff;
     background-color: #2279a6 !important;
     border-color: #288dc1 !important;
-    width: 30%;
+    /*width: 30%;*/
     font-size: 11px;
 }
 .mat-dialog-container {
