--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -10,8 +10,7 @@
   <mat-card>
     <div class="row">
       <h3>My Workstations</h3>
-        <span>Workstations are windows are linux Virtual Machines (VMs), which are the means to access the
-            datasets and perform analysis on the datasets assigned to a user.</span><hr>
+        <span>Workstations are Windows or linux Virtual Machines (VMs), which provide a mechanism for SDC users to access the datasets assigned to them or their own datasets, and perform analytics on the data</span><hr>
       <mat-card-content style="max-height: 300px;overflow-y: scroll">
         <table class="table">
           <thead class="thead-inverse">
